// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render first selected 1`] = `
.emotion-0 {
  box-sizing: border-box;
  opacity: 0;
  opacity: 0;
  margin-left: -clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  margin-right: -clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  margin-right: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem) clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem) clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem);
  margin: 0;
}

.emotion-1:enabled {
  cursor: pointer;
}

.emotion-1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-1:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
  width: calc(100% - 2 * clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem));
  height: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  border-top-left-radius: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  border-top-right-radius: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  margin-right: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
}

.emotion-3:enabled {
  cursor: pointer;
}

.emotion-3:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-3:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-7 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
  opacity: 0;
  pointer-events: none;
}

.emotion-7:enabled {
  cursor: pointer;
}

.emotion-7:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-7:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-7:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-7:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
}

.emotion-8>* {
  width: 20px;
  height: 20px;
}

.emotion-9 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
}

.emotion-9:enabled {
  cursor: pointer;
}

.emotion-9:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-9:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-9:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-9:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-11 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem) clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem) clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem);
  margin: 0;
}

.emotion-11:enabled {
  cursor: pointer;
}

.emotion-11:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-11:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-11:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-11:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-11:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
  width: calc(100% - 2 * clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem));
  height: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  border-top-left-radius: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  border-top-right-radius: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  background-color: var(--pbl-theme-colors-brand-main);
}

<div>
  <div
    class="emotion-0"
    data-testid="pbl-tabs"
    role="tablist"
    wrap="wrap"
  >
    <button
      aria-selected="true"
      class="emotion-1"
      data-testid="pbl-tab"
      name="hello"
      role="tab"
    >
      <p
        class="emotion-2"
      >
        Hello
      </p>
    </button>
    <button
      aria-selected="false"
      class="emotion-3"
      data-testid="pbl-tab"
      name="world"
      role="tab"
    >
      <p
        class="emotion-2"
      >
        World
      </p>
    </button>
    <button
      aria-selected="false"
      class="emotion-3"
      data-testid="pbl-tab"
      name="bye"
      role="tab"
    >
      <p
        class="emotion-2"
      >
        Bye
      </p>
    </button>
    <button
      aria-haspopup="menu"
      aria-selected="false"
      class="emotion-7"
      data-testid="pbl-tab"
      role="tab"
    >
      <div
        class="emotion-8"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M4.5 10.5c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S6 12.825 6 12s-.675-1.5-1.5-1.5zm15 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S21 12.825 21 12s-.675-1.5-1.5-1.5zm-7.5 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5 1.5-.675 1.5-1.5-.675-1.5-1.5-1.5z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    style="visibility: hidden; position: absolute;"
  >
    <button
      aria-selected="false"
      class="emotion-9"
      data-testid="pbl-tab"
      name="hello"
      role="tab"
    >
      <p
        class="emotion-2"
      >
        Hello
      </p>
    </button>
    <button
      aria-selected="true"
      class="emotion-11"
      data-testid="pbl-tab"
      name="world"
      role="tab"
    >
      <p
        class="emotion-2"
      >
        World
      </p>
    </button>
    <button
      aria-selected="false"
      class="emotion-9"
      data-testid="pbl-tab"
      name="bye"
      role="tab"
    >
      <p
        class="emotion-2"
      >
        Bye
      </p>
    </button>
  </div>
</div>
`;

exports[`Render tabs with icons 1`] = `
.emotion-0 {
  box-sizing: border-box;
  opacity: 0;
  opacity: 0;
  margin-left: -clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  margin-right: -clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  margin-right: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
}

.emotion-1:enabled {
  cursor: pointer;
}

.emotion-1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-1:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
  width: 20px;
  height: 20px;
}

.emotion-2>* {
  width: 20px;
  height: 20px;
}

.emotion-3 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  margin-right: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem) clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem) clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem);
  margin: 0;
}

.emotion-4:enabled {
  cursor: pointer;
}

.emotion-4:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-4:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-4:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-4:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-4:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
  width: calc(100% - 2 * clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem));
  height: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  border-top-left-radius: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  border-top-right-radius: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-10 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
  opacity: 0;
  pointer-events: none;
}

.emotion-10:enabled {
  cursor: pointer;
}

.emotion-10:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-10:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-10:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-10:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
}

.emotion-11>* {
  width: 20px;
  height: 20px;
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
}

.emotion-12:enabled {
  cursor: pointer;
}

.emotion-12:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-12:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-12:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-12:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

<div>
  <div
    class="emotion-0"
    data-testid="pbl-tabs"
    role="tablist"
    wrap="wrap"
  >
    <button
      aria-selected="false"
      class="emotion-1"
      data-testid="pbl-tab"
      name="first"
      role="tab"
    >
      <div
        class="emotion-2"
      >
        <div
          data-testid="icon1"
        >
          icon1
        </div>
      </div>
      <p
        class="emotion-3"
      >
        First tab
      </p>
    </button>
    <button
      aria-selected="true"
      class="emotion-4"
      data-testid="pbl-tab"
      name="second"
      role="tab"
    >
      <div
        class="emotion-2"
      >
        <div
          data-testid="icon2"
        >
          icon2
        </div>
      </div>
      <p
        class="emotion-3"
      >
        Second tab
      </p>
    </button>
    <button
      aria-selected="false"
      class="emotion-1"
      data-testid="pbl-tab"
      name="third"
      role="tab"
    >
      <div
        class="emotion-2"
      >
        <div
          data-testid="icon3"
        >
          icon3
        </div>
      </div>
      <p
        class="emotion-3"
      >
        Third tab
      </p>
    </button>
    <button
      aria-haspopup="menu"
      aria-selected="false"
      class="emotion-10"
      data-testid="pbl-tab"
      role="tab"
    >
      <div
        class="emotion-11"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M4.5 10.5c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S6 12.825 6 12s-.675-1.5-1.5-1.5zm15 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S21 12.825 21 12s-.675-1.5-1.5-1.5zm-7.5 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5 1.5-.675 1.5-1.5-.675-1.5-1.5-1.5z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    style="visibility: hidden; position: absolute;"
  >
    <button
      aria-selected="false"
      class="emotion-12"
      data-testid="pbl-tab"
      name="first"
      role="tab"
    >
      <div
        class="emotion-2"
      >
        <div
          data-testid="icon1"
        >
          icon1
        </div>
      </div>
      <p
        class="emotion-3"
      >
        First tab
      </p>
    </button>
    <button
      aria-selected="false"
      class="emotion-12"
      data-testid="pbl-tab"
      name="second"
      role="tab"
    >
      <div
        class="emotion-2"
      >
        <div
          data-testid="icon2"
        >
          icon2
        </div>
      </div>
      <p
        class="emotion-3"
      >
        Second tab
      </p>
    </button>
    <button
      aria-selected="false"
      class="emotion-12"
      data-testid="pbl-tab"
      name="third"
      role="tab"
    >
      <div
        class="emotion-2"
      >
        <div
          data-testid="icon3"
        >
          icon3
        </div>
      </div>
      <p
        class="emotion-3"
      >
        Third tab
      </p>
    </button>
  </div>
</div>
`;

exports[`Show "more" tab when there are too many tabs to fit the content 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin-left: -clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  margin-right: -clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  margin-right: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem) clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem) clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem);
  margin: 0;
}

.emotion-1:enabled {
  cursor: pointer;
}

.emotion-1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-1:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
  width: calc(100% - 2 * clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem));
  height: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  border-top-left-radius: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  border-top-right-radius: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
}

.emotion-3:enabled {
  cursor: pointer;
}

.emotion-3:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-3:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
}

.emotion-4>* {
  width: 20px;
  height: 20px;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
}

.emotion-5:enabled {
  cursor: pointer;
}

.emotion-5:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-5:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-5:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-5:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

<div>
  <div
    class="emotion-0"
    data-testid="pbl-tabs"
    fake-width="100"
    role="tablist"
    wrap="wrap"
  >
    <button
      aria-selected="true"
      class="emotion-1"
      data-testid="pbl-tab"
      fake-width="50"
      name="hello"
      role="tab"
    >
      <p
        class="emotion-2"
      >
        Hello
      </p>
    </button>
    <button
      aria-haspopup="menu"
      aria-selected="false"
      class="emotion-3"
      data-testid="pbl-tab"
      fake-width="50"
      role="tab"
    >
      <div
        class="emotion-4"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M4.5 10.5c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S6 12.825 6 12s-.675-1.5-1.5-1.5zm15 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S21 12.825 21 12s-.675-1.5-1.5-1.5zm-7.5 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5 1.5-.675 1.5-1.5-.675-1.5-1.5-1.5z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    style="visibility: hidden; position: absolute;"
  >
    <button
      aria-selected="false"
      class="emotion-5"
      data-testid="pbl-tab"
      fake-width="50"
      name="hello"
      role="tab"
    >
      <p
        class="emotion-2"
      >
        Hello
      </p>
    </button>
    <button
      aria-selected="false"
      class="emotion-5"
      data-testid="pbl-tab"
      fake-width="50"
      name="world"
      role="tab"
    >
      <p
        class="emotion-2"
      >
        World
      </p>
    </button>
    <button
      aria-selected="false"
      class="emotion-5"
      data-testid="pbl-tab"
      fake-width="50"
      name="hi"
      role="tab"
    >
      <p
        class="emotion-2"
      >
        Hi
      </p>
    </button>
    <button
      aria-selected="false"
      class="emotion-5"
      data-testid="pbl-tab"
      fake-width="50"
      name="earth"
      role="tab"
    >
      <p
        class="emotion-2"
      >
        Earth
      </p>
    </button>
  </div>
</div>
`;

exports[`Work with one tab 1`] = `
.emotion-0 {
  box-sizing: border-box;
  opacity: 0;
  opacity: 0;
  margin-left: -clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  margin-right: -clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  margin-right: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem) clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem) clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem);
  margin: 0;
}

.emotion-1:enabled {
  cursor: pointer;
}

.emotion-1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-1:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
  width: calc(100% - 2 * clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem));
  height: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  border-top-left-radius: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  border-top-right-radius: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
  opacity: 0;
  pointer-events: none;
}

.emotion-3:enabled {
  cursor: pointer;
}

.emotion-3:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-3:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
}

.emotion-4>* {
  width: 20px;
  height: 20px;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  margin: 0 0 clamp(0rem, 0rem + 0vw, 0rem);
  white-space: nowrap;
}

.emotion-5:enabled {
  cursor: pointer;
}

.emotion-5:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-5:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-5:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-5:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

<div>
  <div
    class="emotion-0"
    data-testid="pbl-tabs"
    role="tablist"
    wrap="wrap"
  >
    <button
      aria-selected="true"
      class="emotion-1"
      data-testid="pbl-tab"
      name="hello"
      role="tab"
    >
      <p
        class="emotion-2"
      >
        Hello
      </p>
    </button>
    <button
      aria-haspopup="menu"
      aria-selected="false"
      class="emotion-3"
      data-testid="pbl-tab"
      role="tab"
    >
      <div
        class="emotion-4"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M4.5 10.5c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S6 12.825 6 12s-.675-1.5-1.5-1.5zm15 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S21 12.825 21 12s-.675-1.5-1.5-1.5zm-7.5 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5 1.5-.675 1.5-1.5-.675-1.5-1.5-1.5z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    style="visibility: hidden; position: absolute;"
  >
    <button
      aria-selected="false"
      class="emotion-5"
      data-testid="pbl-tab"
      name="hello"
      role="tab"
    >
      <p
        class="emotion-2"
      >
        Hello
      </p>
    </button>
  </div>
</div>
`;
